# NewGameMaker

./: .gitignore  CMakeLists.txt  NewGameMaker.slnx  README.md  test_renderers.cpp
Engine/: Engine.cpp  Engine.rc  Engine.vcxproj  Engine.vcxproj.filters  Resource.h
EngineIde/: EngineIde.cpp  EngineIde.rc  EngineIde.vcxproj  EngineIde.vcxproj.filters  Resource.h
Renderer/: DirectXRenderer.cpp  DirectXRenderer.h  IRenderer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  README.md  RendererFactory.cpp  RendererFactory.h  SoftwareRenderer.cpp  SoftwareRenderer.h  VulkanRenderer.cpp  VulkanRenderer.h
Runtime/: Runtime.vcxproj
WindowManager/: CMakeLists.txt  IWindow.h  RenderWindow.cpp  RenderWindow.h  Win32Window.cpp  Win32Window.h  WindowManager.cpp  WindowManager.h  WindowManagerExample.cpp  WindowOverlapExample.cpp
